      
      \item The initialization of the regression coefficients for
      differenced models in \code{arima()} has been changed and
      in some examples avoids a local maximum.
      (\PR{15396})
      
      \item Dataset \code{npk} has been copied from \pkg{MASS} to allow
      more tests to be run without recommended packages being installed.
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item The included version of LAPACK has been updated to 3.4.2.

      \item The minimum version for a system \code{xz} library is now
      5.0.3 (was 4.999).  This is in part to avoid 5.0.2, which can
      compress in ways other versions cannot decompress.

      \item There is some support for parallel testing of an
      installation, by setting \env{TEST_MC_CORES} is set to an integer
      greater than one to indicate the maximum number of cores to be
      used in parallel. (It is worth specifying at least 8 cores if
      available.)  Most of these require a \command{make} program (such
      as GNU \command{make} and \command{dmake}) which supports the
      \command{${MAKE} -j nproc} syntax.

      Except on Windows: the tests of standard package examples in
      \command{make check} are done in parallel.  This also applies to
      running \code{tools::testInstalledPackages()}.

      The more time-consuming regression tests are done in parallel.

      The package checks in \command{make check-devel} and \command{make
	check-recommended} are done in parallel.
    
      \item More of \command{make check} will work if recommended packages
      are not installed: but recomemended packages remain needed for
      thorough checking of an \R build.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item In the \file{DESCRIPTION} file, \preformatted{    License: X11}
      is no longer recognized as valid.  Use \sQuote{MIT} or
      \sQuote{BSD_2_clause} instead.
