@@ -1,7 +1,7 @@
 #  File src/library/grDevices/R/colorRamp.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2013 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -22,16 +22,21 @@ colorRampPalette <- function(colors,...)
     ramp <- colorRamp(colors,...)
     function(n) {
         x <- ramp(seq.int(0, 1, length.out = n))
-        rgb(x[, 1L], x[, 2L], x[, 3L], maxColorValue = 255)
+        if (ncol(x) == 4L)
+            rgb(x[, 1L], x[, 2L], x[, 3L], x[, 4L], maxColorValue = 255)
+        else rgb(x[, 1L], x[, 2L], x[, 3L], maxColorValue = 255)
     }
 
 }
 
 colorRamp <- function(colors, bias = 1, space = c("rgb","Lab"),
-                    interpolate = c("linear","spline"))
+                    interpolate = c("linear","spline"), alpha = FALSE)
 {
     if (bias <= 0) stop("'bias' must be positive")
-    colors <- t(col2rgb(colors)/255)
+    if (!missing(space) && alpha)
+        stop("'alpha' must be false if 'space' is specified")
+
+    colors <- t(col2rgb(colors, alpha = alpha)/255)
     space <- match.arg(space)
     interpolate <- match.arg(interpolate)
 
@@ -39,7 +44,9 @@ colorRamp <- function(colors, bias = 1, space = c("rgb","Lab"),
         colors <- convertColor(colors, from = "sRGB", to = "Lab")
 
 
-    interpolate <- switch(interpolate, linear=stats::approxfun, spline=stats::splinefun)
+    interpolate <- switch(interpolate,
+                          linear = stats::approxfun,
+                          spline = stats::splinefun)
 
     if((nc <- nrow(colors)) == 1L) {
         colors <- colors[c(1L, 1L) ,]
@@ -48,7 +55,8 @@ colorRamp <- function(colors, bias = 1, space = c("rgb","Lab"),
     x <- seq.int(0, 1, length.out = nc)^bias
     palette <- c(interpolate(x, colors[, 1L]),
                  interpolate(x, colors[, 2L]),
-                 interpolate(x, colors[, 3L]))
+                 interpolate(x, colors[, 3L]),
+                 if(alpha) interpolate(x, colors[, 4L]))
 
     roundcolor <- function(rgb) ## careful to preserve matrix:
 	pmax(pmin(rgb, 1), 0)
@@ -57,11 +65,13 @@ colorRamp <- function(colors, bias = 1, space = c("rgb","Lab"),
         function(x)
             roundcolor(convertColor(cbind(palette[[1L]](x),
                                           palette[[2L]](x),
-                                          palette[[3L]](x)),
+                                          palette[[3L]](x),
+                                          if(alpha) palette[[4L]](x)),
                                     from = "Lab", to = "sRGB"))*255
     else
         function(x)
             roundcolor(cbind(palette[[1L]](x),
                              palette[[2L]](x),
-                             palette[[3L]](x)))*255
+                             palette[[3L]](x),
+                             if(alpha) palette[[4L]](x)))*255
 }
